# TwitchLiveNotifier

./: .env.example  Cargo.toml  LICENSE  Makefile  README.md  go.mod
.devcontainer/: devcontainer.json
cmd/bot/: main.go
internal/config/: config.go
internal/discord/: client.go
internal/discord/commands/: ping.go  register.go
internal/discord/events/: events.go
internal/discord/twitch/: stream_info.go  webhook.go
internal/utils/: logger.go
src/: commands.rs  config.rs  handler.rs  main.rs  twitch.rs
src/twitch/: mod.rs  stream_info.rs  subscription.rs  token.rs
