[package]
name = "discord-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
dotenv = "0.15.0"
hmac = "0.12.1"
poise = "0.6.1"
reqwest = { version = "0.12.13", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.4"
sha2 = "0.10.8"
subtle = "2.6.1"
tokio = { version = "1.44.0", features = ["macros", "rt-multi-thread"]}
tracing-subscriber = "0.3.19"
warp = "0.3.7"
